Move SDK release paths to Java 25